Fixed images only stretching to a certain size on large screens

--- a/public/javascript/components/isotope/form.scss
+++ b/public/javascript/components/isotope/form.scss
@@ -22,9 +22,7 @@ label {
     display:block;
 }
 
-
-/* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
     .box__container--desktop {
         display:block;
     }
